<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rinoindraw.storybismillahkesekian.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
            <action
                android:id="@+id/action_homeFragment_to_settingsFragment"
                app:destination="@id/navigation_settings"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:launchSingleTop="false"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"
                app:popUpToInclusive="false" />
            <action
                android:id="@+id/action_settingsFragment_to_homeFragment"
                app:destination="@id/navigation_home"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:launchSingleTop="false"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"
                app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.rinoindraw.storybismillahkesekian.ui.location.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.rinoindraw.storybismillahkesekian.ui.create.CreateStoryFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_create_story" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rinoindraw.storybismillahkesekian.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" />
</navigation>